--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,12 +17,13 @@
         </activity>
         <activity
             android:name=".profile.CandidateProfileActivity"
-            android:label="@string/title_activity_candidate_profile" >
-        </activity>
+            android:label="@string/title_activity_candidate_profile"
+            />
         <activity
             android:name=".bio.BiographyActivity"
             android:label="@string/title_activity_biography"
-            android:theme="@style/AppTheme.NoActionBar" />
+            android:theme="@style/AppTheme.NoActionBar"
+            />
     </application>
 
 </manifest>
