--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme" >
-        <activity android:name=".candidate.CandidateListActivity" >
+        <activity android:name=".SplashActivity"
+            android:theme="@style/AppTheme.NoActionBar.FullScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -17,13 +18,14 @@
         </activity>
         <activity
             android:name=".profile.CandidateProfileActivity"
-            android:label="@string/title_activity_candidate_profile"
-            />
+            android:label="@string/title_activity_candidate_profile" />
+        <activity
+            android:name=".candidate.CandidateListActivity"
+            android:label="@string/title_activity_candidate_list" />
         <activity
             android:name=".bio.BiographyActivity"
             android:label="@string/title_activity_biography"
-            android:theme="@style/AppTheme.NoActionBar"
-            />
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
